# flux

./: .gitignore  .luaurc  Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.cargo/: config.toml
.github/workflows/: release.yml  velopack.yml
assets/api/: flux_luau_api.json
crates/flux_assetgen/: Cargo.toml
crates/flux_assetgen/src/: buildings.rs  canvas.rs  icons.rs  iso.rs  lib.rs  main.rs  palette.rs  terrain.rs
crates/flux_assetgen/tests/: generate.rs
crates/flux_core/: Cargo.toml
crates/flux_core/src/: animation.rs  building.rs  camera.rs  class.rs  error.rs  factory.rs  gui.rs  lib.rs  reactor.rs  registries.rs  save.rs  serialize.rs  subtree.rs  tilemap.rs  transform.rs  value.rs  world.rs
crates/flux_core/tests/: core.rs
crates/flux_data/: Cargo.toml
crates/flux_data/src/: lib.rs  sqlite.rs
crates/flux_data/tests/: provider.rs
crates/flux_editor/: Cargo.toml  build.rs
crates/flux_editor/src/: animation_editor.rs  app.rs  asset_field.rs  assets_panel.rs  command.rs  explorer.rs  json_editor.rs  launcher.rs  main.rs  properties.rs  script_editor.rs  settings.rs  textures.rs  tileset_editor.rs  updater.rs  viewport.rs  worldgen_editor.rs
crates/flux_editor/src/language/: api.rs  ast.rs  builtin.rs  completion.rs  context.rs  diagnostics.rs  flow.rs  hover.rs  lex.rs  mod.rs  parser.rs  scope.rs  semantic.rs  signature.rs  suggestions.rs  symbols.rs  token.rs  types.rs
crates/flux_game/: Cargo.toml
crates/flux_game/src/: building.rs  factory.rs  fluids.rs  lib.rs  lua.rs  pipes.rs  reactor.rs  render.rs
crates/flux_game/tests/: game.rs
crates/flux_game/tests/fixtures/: test.buildings.json
crates/flux_game/tests/fixtures/scripts/: test_buildings.luau  test_factory.luau  test_save.luau
crates/flux_icons/: Cargo.toml
crates/flux_icons/assets/lucide/: LICENSE.md
crates/flux_icons/src/: icon.rs  lib.rs  lucide_data.rs  provider.rs  theme.rs  widget.rs
crates/flux_icons/tests/: registry.rs
crates/flux_player/: Cargo.toml
crates/flux_player/src/: main.rs
crates/flux_plugin/: Cargo.toml  build.rs
crates/flux_plugin/src/: lib.rs
crates/flux_render/: Cargo.toml
crates/flux_render/src/: lib.rs
crates/flux_runtime/: Cargo.toml
crates/flux_runtime/examples/: clicker_smoke.rs  dino_smoke.rs
crates/flux_runtime/src/: lib.rs
crates/flux_runtime/tests/: attributes_tags.rs  camera_controls.rs  session.rs  tilemap_scene.rs
crates/flux_runtime/tests/fixtures/: test.buildings.json
crates/flux_runtime/tests/fixtures/scripts/: balance_module.luau  button.luau  cycle_a.luau  cycle_b.luau  noisy_module.luau  require_cycle.luau  scene_test.luau  test_basic.luau  test_enum.luau  test_error.luau  test_factory.luau  test_gui.luau  test_input.luau  top_level.luau  touching.luau  use_module.luau
crates/flux_script/: Cargo.toml  build.rs
crates/flux_script/src/: data.rs  datastore.rs  enums.rs  instance.rs  lib.rs  save.rs  scheduler.rs  signal.rs  types.rs
crates/flux_view/: Cargo.toml
crates/flux_view/src/: lib.rs  texture.rs
docs/: datastore_service.md  luau_types.md  script_editor.md  sprite-animation.md
installer/: flux.iss
packaging/: velopack.md
packaging/winget/: README.md  thegalaxydev.Flux.installer.yaml  thegalaxydev.Flux.locale.en-US.yaml  thegalaxydev.Flux.yaml
plugins/flux_game/: Cargo.toml
plugins/flux_game/src/: factory.rs  lib.rs  ports.rs  reactor.rs
plugins/flux_game/tests/: game.rs
plugins/flux_game/tests/fixtures/: test.buildings.json  test.recipes.json  test.tileset.json
plugins/flux_game/tests/fixtures/scripts/: noop.luau  test_buildings.luau  test_tilemap.luau
types/: flux.d.luau
xtask/: Cargo.toml
xtask/src/: main.rs
