[package]
name = "flux_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
flux_core.workspace = true
flux_runtime.workspace = true
flux_icons.workspace = true
flux_render.workspace = true
flux_view.workspace = true
eframe = "0.32"
glam.workspace = true
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
