[package]
name = "flux_player"
version = "0.1.0"
edition = "2024"

[dependencies]
flux_plugin.workspace = true
flux_runtime.workspace = true
flux_view.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
eframe = "0.32"
glam.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
