[package]
name = "flux_game"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib: the runtime-loaded plugin the player/editor dlopen per project.
# rlib: keeps the crate's own test suite linking statically.
crate-type = ["rlib", "cdylib"]

[dependencies]
flux_plugin.workspace = true
flux_core.workspace = true
flux_script.workspace = true
flux_view.workspace = true
flux_render.workspace = true
flux_runtime.workspace = true
glam.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
mlua.workspace = true
egui = "0.32"
